[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = []
license = "MIT"
repository = "https://github.com/MrDuan-DLy/panel4ai"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["time", "net", "io-util", "macros"] }
url = "2"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
open = "5"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.6"
